# MathUtilsTest

./: Animal.cpp  Animal.h  CMakeLists.txt  MathUtilsTest.sln  MathUtilsTest.vcxproj  MathUtilsTest.vcxproj.filters  README.md  Vehicle.cpp  Vehicle.h  math_utils.cpp  math_utils.h  test_animal.cpp  test_math_utils.cpp  test_vehicle.cpp
.github/workflows/: ci-linux.yml  ci.yml
